320px media query broaden to 35.99875rem, fix margin on content, align slider text on middle

--- a/scss/blocks/_slider.scss
+++ b/scss/blocks/_slider.scss
@@ -14,6 +14,8 @@
 }
 
 .slider-text {
+	display: flex;
+	flex-direction: column;
 	&__text {
 		font-family: 'Roboto';
 	    font-size: 8.448rem;
