--- a/scss/media/_small.scss
+++ b/scss/media/_small.scss
@@ -1,12 +1,14 @@
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 35.99875rem) {
 	.bgskewed {
 		height: 100%;
 		background-position: top;
 	}
 	.wrapper {
-		max-width: 96%;
+		max-width: 90%;
 	}
 	.slider-text {
+		align-items: center;
+		justify-content: center;
 		&__text {
 			text-align: center;
 		}
@@ -62,6 +64,9 @@
 			text-align: center;
 			font-size: 1rem;
 		}
+		&__position {
+			margin-bottom: 2rem;
+		}
 		&_squeezed {
 			padding: 0;
 		}
@@ -69,15 +74,18 @@
 	.button {
 		&__text {
 			&_big {
-				font-size: 1rem;
+				font-size: 1.4rem;
+				border: 0.01rem solid black;
+				left: 0;
 			}
 		}
 		&__shadow {
 			&_big {
-				left: 4.3rem;
-				top: -5.5rem;
-				width: 12.3rem;
-				height: 2rem;
+				left: -1rem;
+				top: -4.5rem;
+				width: 15.4rem;
+				height: 2.5rem;
+				border: 0.1rem solid black;	
 			}
 		}
 		&_left {
